# emdashy

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.claude/skills/emdashy/: SKILL.md
emdashy/: __init__.py  __main__.py  assembler.py  checker.py  cli.py  compiler_c.py  compiler_py.py  debugger.py  disassembler.py  errors.py  interpreter.py  lexer.py  ops.py  parser.py  repl.py
examples/: adder.emd  adder.emda  cat.emd  cat.emda  factorial.emd  factorial.emda  fibonacci.emd  fibonacci.emda  fizzbuzz.emd  fizzbuzz.emda  hello.emd  hello.emda  truth_machine.emd  truth_machine.emda
siftsuite-onepager/: EDITS.md  ORIGINAL.md  README.md
tests/: helpers.py  test_core.py  test_examples.py  test_tools.py
